[package]
name = "web-rtc-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
webrtc = "0.13"

[dev-dependencies]
mockall = "0.13"
serial_test = "3"
