[package]
name = "web-rtc-server"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
dashmap = "6"
sdp = "0.17"
axum = { version = "0.8", features = ["ws"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
webrtc = "0.17"

[dev-dependencies]
http-body-util = "0.1"
mockall = "0.14"
serial_test = "3"
tower = { version = "0.5", features = ["util"] }
